# sermon

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js  tailwind_watch.sh
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: mod.rs
app/src/components/navbar/: menu.rs
app/src/components/routes/settings/: metrics_sharing.rs
frontend/: Cargo.toml
migrations/: 20230521212818_create_customer_table.sql
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
src/back/: mod.rs
src/components/navbar/: breadcrumbs.rs  mod.rs
src/components/routes/settings/: general_settings.rs  mod.rs  user_profile.rs
src/front/: app.rs  mod.rs
src/front/components/navbar/: breadcrumbs.rs
src/front/components/routes/settings/: general_settings.rs
style/: global.css
